Update restaurant site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1churroscrema-catalanacroquetasrisottotorrijasarroz-negrobacalaocochinillocorderoensaladafideuaflangambasjamonlubinamel-matopaellapan-con-tomatepatatas-bravaspimientospulposolomillotarta-quesotarta-santiagotiramisu.webpwebpjpgjpgjpgjpgwebpwebpjpgjpgwebpjpgwebpwebpjpgwebpwebpjpgjpgpngpngjpgwebpjpgjpg0">
     <title>L'Olivar Vell - Authentic Mediterranean Cuisine in Barcelona</title>
     <meta name="description" content="Experience the finest Mediterranean cuisine at L'Olivar Vell in Barcelona. Authentic flavors, elegant ambiance, and exceptional service.">
     <link rel="stylesheet" href="styles.css">
@@ -67,7 +67,7 @@
             <!-- Starters -->
             <div class="menu-items active" data-category="starters">
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/pan-con-tomate.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/pan-con-tomate.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.pan_con_tomate.name">Pan con Tomate</h3>
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/croquetas.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/croquetas.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.croquetas.name">Croquetas de Jamón</h3>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/gambas.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/gambas.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.gambas.name">Gambas al Ajillo</h3>
@@ -100,7 +100,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/pulpo.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/pulpo.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.pulpo.name">Pulpo a la Gallega</h3>
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/patatas-bravas.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/patatas-bravas.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.patatas.name">Patatas Bravas</h3>
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/pimientos.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/pimientos.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.pimientos.name">Pimientos de Padrón</h3>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/jamon.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/jamon.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.jamon.name">Jamón Ibérico</h3>
@@ -144,7 +144,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/ensalada.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/ensalada.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.ensalada.name">Ensalada Mediterránea</h3>
@@ -158,7 +158,7 @@
             <!-- Main Courses -->
             <div class="menu-items" data-category="mains">
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/paella.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/paella.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.paella.name">Paella de Mariscos</h3>
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/bacalao.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/bacalao.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.bacalao.name">Bacalao a la Catalana</h3>
@@ -180,7 +180,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/cordero.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/cordero.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.cordero.name">Cordero Asado</h3>
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/risotto.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/risotto.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.risotto.name">Risotto de Setas</h3>
@@ -202,7 +202,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/lubina.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/lubina.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.lubina.name">Lubina al Horno</h3>
@@ -213,7 +213,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/solomillo.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/solomillo.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.solomillo.name">Solomillo de Ternera</h3>
@@ -224,7 +224,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/arroz-negro.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/arroz-negro.png')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.arroz_negro.name">Arroz Negro</h3>
@@ -235,7 +235,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/fideua.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/fideua.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.fideuá.name">Fideuá de Mariscos</h3>
@@ -246,7 +246,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/cochinillo.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/cochinillo.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.cochinillo.name">Cochinillo Asado</h3>
@@ -260,7 +260,7 @@
             <!-- Desserts -->
             <div class="menu-items" data-category="desserts">
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/crema-catalana.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/crema-catalana.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.crema_catalana.name">Crema Catalana</h3>
@@ -271,7 +271,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/tarta-santiago.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/tarta-santiago.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.tarta.name">Tarta de Santiago</h3>
@@ -282,7 +282,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/flan.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/flan.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.flan.name">Flan de Huevo</h3>
@@ -293,7 +293,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/churros.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/churros.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.churros.name">Churros con Chocolate</h3>
@@ -304,7 +304,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/tarta-queso.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/tarta-queso.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.tarta_queso.name">Tarta de Queso</h3>
@@ -315,7 +315,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/mel-mato.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/mel-mato.jpg')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.mel_mato.name">Mel i Mató</h3>
@@ -326,7 +326,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/tiramisu.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/tiramisu.webp')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.tiramisu.name">Tiramisú Mediterráneo</h3>
@@ -337,7 +337,7 @@
                 </div>
 
                 <div class="menu-item">
-                    <div class="menu-item-image" style="background-image: url('images/menu/torrijas.svg')"></div>
+                    <div class="menu-item-image" style="background-image: url('images/menu/torrijas.png')"></div>
                     <div class="menu-item-content">
                         <div class="menu-item-header">
                             <h3 data-i18n="menu.items.torrijas.name">Torrijas</h3>
